SoulSyncApp/k8s/rollouts/services.yaml
apiVersion: v1
kind: Service
metadata:
  name: soulsync-app-active
spec:
  type: ClusterIP
  ports:
    - name: http
      port: 80
      targetPort: 3000
  selector:
    app: soulsync
    tier: app
---
apiVersion: v1
kind: Service
metadata:
  name: soulsync-app-preview
spec:
  type: ClusterIP
  ports:
    - name: http
      port: 80
      targetPort: 3000
  selector:
    app: soulsync
    tier: app
